# tesseract_gui

./: CMakeLists.txt  README.md  dependencies.rosinstall  dependencies_unstable.rosinstall  package.xml
acm/: CMakeLists.txt
acm/demo/: acm_demo.cpp
acm/src/: allowed_collision_matrix_model.cpp  allowed_collision_matrix_widget.cpp
app/: CMakeLists.txt
app/src/: main.cpp  tesseract_robotics_studio.cpp
common/: CMakeLists.txt
common/src/: conversions.cpp  entity_container.cpp  entity_manager.cpp  gui_events.cpp  gui_utils.cpp  joint_trajectory_set.cpp  svg_util.cpp
demo_app/: CMakeLists.txt
demo_app/src/: MainWindow.cpp  StatusDialog.cpp  main.cpp
joint_slider/: CMakeLists.txt
joint_slider/demo/: joint_slider_demo.cpp
joint_slider/src/: joint_list_model.cpp
kinematic_group/: CMakeLists.txt
kinematic_group/demo/: kinematic_group_demo.cpp
kinematic_group/src/: kinematic_group_editor_widget.cpp  kinematic_group_model.cpp  opw_params_standard_item.cpp  tcp_standard_item.cpp
plot/: CMakeLists.txt
plot/demo/: plot_demo.cpp  plot_docker_demo.cpp
plot/src/: plot_data.cpp  plot_docker.cpp  plot_subplots.cpp  plot_widget.cpp  plot_widget_base.cpp  plot_widget_editor.cpp  plot_widget_transforms.cpp  plot_zoomer.cpp  timeseries_qwt.cpp  transform_function.cpp
plot/src/transforms/: moving_average_filter.cpp  outlier_removal.cpp  transform_selector.cpp
rendering/: CMakeLists.txt
rendering/demo/: render_widget_demo.cpp  rendering_demo.cpp  simple_render_widget_demo.cpp  threaded_render_widget_demo.cpp
rendering/src/: interactive_view_control.cpp  minimal_scene.cpp  render_widget.cpp  simple_render_widget.cpp
resources/: CMakeLists.txt
resources/src/: svg_util.cpp
scene_graph/: CMakeLists.txt
scene_graph/demo/: scene_graph_demo.cpp
scene_graph/include/scene_graph/: scene_graph_model.h
scene_graph/src/: box_standard_item.cpp  calibration_standard_item.cpp  capsule_standard_item.cpp  collision_standard_item.cpp  cone_standard_item.cpp  cylinder_standard_item.cpp  dynamics_standard_item.cpp  inertial_standard_item.cpp  joint_standard_item.cpp  limits_standard_item.cpp  link_standard_item.cpp  material_standard_item.cpp  mimic_standard_item.cpp  octree_standard_item.cpp  origin_standard_item.cpp  plane_standard_item.cpp  polygon_mesh_standard_item.cpp  safety_standard_item.cpp  scene_graph_standard_item.cpp  sphere_standard_item.cpp  visual_standard_item.cpp
scene_managers/transport_scene_manager/: CMakeLists.txt
scene_managers/transport_scene_manager/demo/: transport_scene_manager_demo.cpp
scene_managers/transport_scene_manager/src/: transport_conversions.cpp  transport_marker_manager.cpp  transport_scene_manager.cpp
tesseract_ignition/: CHANGELOG.rst  CMakeLists.txt  package.xml
tesseract_ignition/demo/: CMakeLists.txt  basic_render_widget_demo.cpp  blitter_render_widget_demo.cpp  glut_render_widget_demo.cpp  qpainter_render_widget_demo.cpp  qquick_render_widget_demo.cpp  simple_render_widget_demo.cpp  threaded_render_widget_demo.cpp
tesseract_ignition/include/tesseract_ignition/: basic_render_widget.h  blitter_render_widget.h  conversions.h  glut_render_widget.h  gui_events.h  gui_utils.h  gz_render_thread.h  gz_renderer.h  ignition_environment_widget.h  interactive_view_control.h  minimal_scene.h  qpainter_render_widget.h  render_widget.h  simple_render_widget.h
tesseract_ignition/scene_managers/transport_scene_manager/: CMakeLists.txt
tesseract_ignition/src/: basic_render_widget.cpp  conversions.cpp  glut_render_widget.cpp  gui_events.cpp  gui_utils.cpp  gz_render_thread.cpp  gz_renderer.cpp  ignition_environment_widget.cpp  interactive_view_control.cpp  minimal_scene.cpp  qpainter_render_widget.cpp  render_widget.cpp  simple_render_widget.cpp
tesseract_ignition/troubleshooting/glut/: CMakeLists.txt  GlutWindow.cc  Main.cc
tesseract_ignition/troubleshooting/issue/: CMakeLists.txt  main.cpp  minimal_example.h
tesseract_ignition/troubleshooting/offscreen_render/: glwidget.cpp  glwidget.h  renderer.cpp  renderer.h  renderthread.cpp  renderthread.h  texturebuffer.cpp  texturebuffer.h
tesseract_ignition/troubleshooting/threaded/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
tesseract_robotics_studio/: CHANGELOG.rst  CMakeLists.txt  package.xml
tesseract_robotics_studio/demo_app/: CMakeLists.txt
tesseract_robotics_studio/demo_app/src/: MainWindow.cpp  StatusDialog.cpp  main.cpp
tesseract_robotics_studio/include/tesseract_robotics_studio/: tesseract_robotics_studio.h  tesseract_robotics_studio.ui
tesseract_robotics_studio/src/: main.cpp  tesseract_robotics_studio.cpp
tesseract_widgets/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
tesseract_widgets/acm/: CMakeLists.txt
tesseract_widgets/acm/demo/: acm_demo.cpp
tesseract_widgets/acm/src/: add_allowed_collision_entry_dialog.cpp  allowed_collision_matrix_model.cpp  allowed_collision_matrix_tree_view.cpp  allowed_collision_matrix_widget.cpp
tesseract_widgets/collision/: CMakeLists.txt
tesseract_widgets/collision/src/: collision_margin_data_standard_item.cpp  contact_request_standard_item.cpp  contact_result_standard_item.cpp  (+3 more)
tesseract_widgets/command_language/: CMakeLists.txt
tesseract_widgets/common/: CMakeLists.txt
tesseract_widgets/environment/: CMakeLists.txt
tesseract_widgets/joint_state_slider/: CMakeLists.txt
tesseract_widgets/joint_trajectory/: CMakeLists.txt
tesseract_widgets/kinematic_groups/: CMakeLists.txt
tesseract_widgets/manipulation/: CMakeLists.txt
tesseract_widgets/planning/: CMakeLists.txt
tesseract_widgets/plot/: CMakeLists.txt
tesseract_widgets/scene_graph/: CMakeLists.txt
tesseract_widgets/workbench/: CMakeLists.txt
widgets/: CMakeLists.txt
widgets/acm/: CMakeLists.txt
widgets/common/: CMakeLists.txt
widgets/environment/: CMakeLists.txt
widgets/joint_state_slider/: CMakeLists.txt
widgets/joint_trajectory/: CMakeLists.txt
widgets/kinematic_groups/: CMakeLists.txt
widgets/plot/: CMakeLists.txt
widgets/rendering/: CMakeLists.txt
widgets/scene_graph/: CMakeLists.txt
(+723 files in other folders)
