<?xml version="1.0"?>
<package format="2">
  <name>tesseract_ignition</name>
  <version>0.1.2</version>
  <description>The tesseract_ignition package</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>LGPL-3.0</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>tesseract_widgets</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_support</depend>
  <depend>tesseract_urdf</depend>
  <depend>ignition-gui6</depend>
  <depend>ignition-rendering6</depend>
  <depend>ignition-common4</depend>
  <depend>ignition-transport11</depend>
  <depend>ignition-msgs8</depend>
  <depend>ignition-math6</depend>
  <depend>sdformat12</depend>
  <depend>glut</depend>
  <depend>libglew-dev</depend>
  <depend>libqt5-opengl</depend>
  <depend>libqt5-quick</depend>



  <export>
    <build_type>cmake</build_type>
  </export>
</package>
